--- a/app/views/business/_form.html.erb
+++ b/app/views/business/_form.html.erb
@@ -2,7 +2,7 @@
 </div>
 <div class="col-md-6"
 </div>
-	<%= bootstrap_form_for @busine do |f| %>
+	<%= bootstrap_form_for @business do |f| %>
 
 
 		<%= f.text_field :name, placeholder: 'i.e. Cool Business' %>
