business new renders through partial. Categories controller needs to be made

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,12 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+/*
+NEW BUSINESS FORM
+*/
+.new-business {
+  width: 60vw;
+  max-width: 600px;
+  margin: 0 auto;
+}
