--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,12 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <% if current_business %>
+          <li><%= link_to "Log out", logout_path %></li>
+          <% else %>
+          <li><%= link_to "Sign up", new_business_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
+          <% end %>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
