--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <% if current_business %>
-          <li><%= link_to "Log out", logout_path %></li>
+          <li><%= link_to "Log out", logout_path, method: :delete %></li>
           <% else %>
           <li><%= link_to "Sign up", new_business_path %></li>
           <li><%= link_to "Log in", login_path %></li>
