--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,13 +1,17 @@
-<% @items.each do |item| %>
+<% current_business.items.each do |item| %>
 <div class="">
   <p>
-    <%=item.name%>
+    <%= item.name.capitalize %>
   </p>
   <p>
-    <%=item.description%>
+    <%= item.description %>
   </p>
   <p>
-    <%=item.price%>
+    <%= number_to_currency(item.price) %>
+  </p>
+  <p>
+    <%= link_to "Edit Item", edit_item_path(item.id) %>
   </p>
 </div>
 <% end %>
+<%= link_to "Add Item", new_item_path %>
