--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Project name", "#", class: "navbar-brand" %>
+        <%= link_to "QwikBit", static_pages_landing_path, class: "navbar-brand" %>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <% if current_business %>
+          <li><%= link_to current_business.name, business_path(current_business.id) %></li>
           <li><%= link_to "Log out", logout_path, method: :delete %></li>
           <% else %>
           <li><%= link_to "Sign up", new_business_path %></li>
