--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           <li><%= link_to "Sign up", new_business_path %></li>
           <li><%= link_to "Log in", login_path %></li>
           <% end %>
-          <li><a href="#contact">Contact</a></li>
+          <li><%= link_to "Contact", static_pages_contact_path %></li>
         </ul>
       </div>
     </div>
