--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -8,6 +8,10 @@
   Wallet address: <%= wallet.wallet_address %>
 </p>
 <p>
+  key: <%= wallet.private_key%>
+</p>
+
+<p>
 <%#=  link_to "Remove Wallet", wallet_path, method: :delete %>
 <%= link_to 'Delete', wallet,
   method: :delete,
@@ -17,5 +21,5 @@
 </p>
 <hr>
 <% end %>
-<%= link_to "add wallet", new_wallet_path %>
-<%= link_to 'new wallet', generate_key_path, method: :generate %>
+<%= link_to "Add existing", new_wallet_path %>
+<%= link_to 'Make a new wallet', generate_key_path, method: :generate %>
