--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= current_business.name %></h1>
+<div id = "googleMap"></div>
 <p>
   <%= link_to "Edit Business", edit_business_path(current_business.id) %>
 </p>
