--- a/app/views/layouts/_items_form.html.erb
+++ b/app/views/layouts/_items_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @item do |f| %>
-  <%= f.text_field :name, placeholder: 'i.e. Blue Pants' %>
-  <%= f.text_field :price , placeholder: 'i.e $10' %>
-  <%= f.text_area :description,  cols: 40, rows: 4, placeholder: 'A brief description of your business'  %>
+  <%= f.text_field :name, placeholder: 'Item Name' %>
+  <%= f.text_field :price , placeholder: 'Price' %>
+  <%= f.text_area :description,  cols: 40, rows: 4, placeholder: 'A brief description of the item'  %>
   <div>
       <%= f.submit%>
   </div>
