--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -11,7 +11,7 @@
       <h1 class="ui inverted header logo">
         Qwickbit
       </h1>
-      <h2>The Platform for business owners to sell locally and get paid immediatly in Bitcoin<p></p>
+      <h2 class="h2 txt">The Platform for business owners to sell locally and get paid immediatly in Bitcoin<p></p>
       <%= link_to "Sign up", new_business_path, class: 'ui huge primary button' %>
 
     </h2>
