--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,8 +17,9 @@
 
 
 
-
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
 
 
 /*
@@ -33,8 +34,7 @@
   margin: 0 auto;
 }*/
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+
 
 /*
 
@@ -99,3 +99,8 @@
   h2{
     font-size: 3vw;
   }
+
+.h2.txt{
+  color: #d3d3d3;
+
+}
