--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,3 +1,8 @@
+<div class="ui four column doubling grid container">
+<div class="ui text container">
+
 <div class="business-form">
   <%= render 'layouts/business_form' %>
+</div>
+</div>
 </div>
