--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,9 +1,11 @@
+<div class="ui four column doubling grid container">
+
 <h1><%= current_business.name %></h1>
 <div id = "googleMap"></div>
 <p>
   <%= link_to "Edit Business", edit_business_path(current_business.id) %>
 </p>
-<hr>
+
 <% current_business.items.each do |item| %>
 <div class="business-items">
   <p>
@@ -19,6 +21,7 @@
     <%= link_to "Edit Item", edit_item_path(item.id) %>
   </p>
 </div>
-<hr>
+
 <% end %>
 <%= link_to "Add Item", new_item_path %>
+</div>
