--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,5 @@
-<div class="item-form">
+<div class="ui four column doubling grid container">
+<div class="ui text container">
   <%= render 'layouts/items_form' %>
+</div>
 </div>
