--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -53,8 +53,10 @@
       </div>
       <% else %>
       <div class="right item">
+
         <%= link_to "Sign up", new_business_path, class: 'item, ui inverted button' %>
-        <%= link_to "Log in", login_path, class: 'item, ui inverted button' %>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+        <%= link_to "Log in", login_path, class: 'item, ui inverted button rbtn' %>
       </div>
       <% end %>
     </div>
