--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,3 +1,10 @@
-<div class="business-form">
+
+
+<div class="ui four column doubling grid container">
+<div class="ui text container">
+
+
   <%= render 'layouts/business_form' %>
+
+</div>
 </div>
