--- a/app/views/layouts/_items_form.html.erb
+++ b/app/views/layouts/_items_form.html.erb
@@ -1,8 +1,9 @@
-<%= simple_form_for @item do |f| %>
+<%= bootstrap_form_for @item do |f| %>
+<div class="ui form">
   <%= f.text_field :name, placeholder: 'Item Name' %>
   <%= f.text_field :price , placeholder: 'Price' %>
   <%= f.text_area :description,  cols: 40, rows: 4, placeholder: 'A brief description of the item'  %>
-  <div>
-      <%= f.submit%>
-  </div>
+
+      <%= f.submit "Add Item", class: 'ui standard black button'%>
+</div>
 <% end %>
