--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -12,7 +12,7 @@
         Qwickbit
       </h1>
       <h2 class="h2 txt">The Platform for business owners to sell locally and get paid immediatly in Bitcoin<p></p>
-      <%= link_to "Sign up", new_business_path, class: 'ui huge primary button' %>
+      <%= link_to "Sign up", new_business_path, class: 'ui huge green button' %>
 
     </h2>
   </div>
