--- a/app/views/wallets/new.html.erb
+++ b/app/views/wallets/new.html.erb
@@ -1,1 +1,5 @@
+<div class="ui four column doubling grid container">
+<div class="ui text container">
 <%= render 'layouts/wallet_form' %>
+</div>
+</div>
