--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ textarea {
   background-repeat: no-repeat;
   position: fixed;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
   background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
