adds config for api and figaro

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,10 +48,10 @@ textarea {
   padding-top: 1vh;
 }
 
-#qrcode {
- width:160px;
-  height:160px;
-  margin-top:15px;
+#pub_qrcode{
+ width:10vw;
+  height:10vh;
+  // margin-top:15px;
 }
 
 
@@ -64,7 +64,9 @@ textarea {
 #landing{
   position: absolute;
   top: 33vh;
-  left: 32vw;
+  left: 30vw;
+  width: 40vw;
+  height: 30vh;
 }
 
 .landing{
@@ -94,7 +96,7 @@ h1.ui.header{
   font-size: 5vw;
 }
 
-h2{
+h2.h2{
   font-size: 2.3vw;
 }
 
@@ -110,3 +112,12 @@ input.ui.standard.black.button {
   margin-left: 14vw;
   margin-top: 3vh;
 }
+
+// .ui.huge.green.button{
+//   display: block;
+//   position: absolute;
+//   width: 20%;
+//   height: 20%;
+//   top: 29vh;
+//   left: 17vw;
+// }
