--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -11,8 +11,9 @@
       <h1 class="ui inverted header logo">
         Qwickbit
       </h1>
-      <h2 class="h2 txt">The Platform for business owners to sell locally and get paid immediatly in Bitcoin<p></p>
-      <%= link_to "Sign up", new_business_path, class: 'ui huge green button' %>
+      <h2 class="h2 txt">The Platform for business owners to sell locally and get paid immediatly in Bitcoin
+        <br>
+      <%= link_to "Sign up", new_business_path, class: 'ui huge green button block' %>
 
     </h2>
   </div>
