--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,8 +1,8 @@
 <div class="ui four column doubling grid container">
-<h2><%= @bal %></h2>
+<h2><%#= @bal %></h2>
 <h1><%= current_business.name %> Wallet</h1>
 
-<% current_business.wallets.each do |wallet| %>
+<% @wallets.each do |wallet| %>
 <p>
   Name: <%= wallet.name %>
 </p>
