commiting before sleep

--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,29 +1,35 @@
 <div class="ui four column doubling grid container">
-<h2><%#= @bal %></h2>
-<h1><%= current_business.name %> Wallet</h1>
 
+<h1><%= current_business.name %> Wallet</h1>
+<% if current_business.wallets.size > 0 %>
+<% @balances.each do |bal| %>
+<h2>
+<%= bal["total"]["balance"] * 0.00000001 %>
+</h2>
+<% end %>
 <% @wallets.each do |wallet| %>
 <p>
   Name: <%= wallet.name %>
 </p>
+<h1></h1>
 <p>
-<h2>  <%= wallet.balance  %></h2>
+<h2>  <%#= wallet.balance  %></h2>
 
     Wallet address: <%= wallet.wallet_address %>
 
 </p>
 <p>
   <div class="private_key" value='<%= wallet.private_key%>'>
-    key: <%#= wallet.private_key%>
+    key: <%= wallet.private_key%>
 </div>
 </p>
 <input id="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
-<div id="pub_qrcode"></div>
+<!-- <div id="pub_qrcode"></div> -->
 <input id="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" /><br />
-<div id="priv_qrcode"></div>
+<!-- <div id="priv_qrcode"></div> -->
 
 <p>
-<%#=  link_to "Remove Wallet", wallet_path, method: :delete %>
+
 <%= link_to 'Delete', wallet,
   method: :delete,
   data: { confirm: 'Are you sure?' } %></td>
@@ -32,6 +38,9 @@
 </p>
 
 <% end %>
+<% else %>
+<% end %>
+
 
 <%= link_to "Add existing", new_wallet_path %>
 <%= link_to 'Make a new wallet', generate_key_path, method: :generate %>
