made styling changes and variable changes to javascript

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,10 +35,9 @@
   <% end %>
 </div>
 
-
 <div class="ui inverted vertical masthead center aligned segment">
 
-  <div class="ui container">
+  <div class="container">
     <div class="ui large secondary inverted pointing menu">
       <a class="toc item">
         <i class="sidebar icon"></i>
@@ -53,7 +52,6 @@
       </div>
       <% else %>
       <div class="right item">
-
         <%= link_to "Sign up", new_business_path, class: 'item, ui inverted button' %>
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         <%= link_to "Log in", login_path, class: 'item, ui inverted button rbtn' %>
