--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,22 +1,20 @@
 <h1><%= current_business.name %> Wallet</h1>
 <% @wallets.each do |wallet| %>
-<div>
+<div class="wallet_info">
   <p>Name: <%= wallet.name %></p>
   <p>Balance: <%= wallet.balance %></p>
-  <p>Wallet address: <%= wallet.wallet_address %></p>
-  <div class="private_key" value='<%= wallet.private_key%>'>
-    <p>key: <%= wallet.private_key%></p>
+  <div class="public_key_wrapper">
+    <input id="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
+    <div id="pub_qrcode"></div>
+    <p>Wallet address: <%= wallet.wallet_address %></p>
+  </div>
+  <div class="private_key_wrapper">
+    <input id="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" /><br />
+    <div id="priv_qrcode"></div>
+    <p class="private_key" value='<%= wallet.private_key %>'>private key: <%= wallet.private_key%></p>
+    <p><%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></p>
   </div>
 </div>
-
-<div>
-  <%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' } %>
-</div>
-
-<input id="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
-<div id="pub_qrcode"></div>
-<input id="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" /><br />
-<div id="priv_qrcode"></div>
 
 
 <% end %>
