--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,19 +1,19 @@
 <h1><%= current_business.name %> Wallet</h1>
 <% @wallets.each do |wallet| %>
-<div class="wallet_info">
+<div class="wallet_info" style="border:1px solid black">
   <p>Name: <%= wallet.name %></p>
   <p>Balance: <%= wallet.balance %></p>
   <div class="public_key_wrapper">
     <input id="pub_ad" class="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
-    <div id="pub_qrcode" class="pub-qr-test"></div>
+    <div id="pub_qrcode" class="pub-qrcode"></div>
     <p>Wallet address: <%= wallet.wallet_address %></p>
   </div>
   <div class="private_key_wrapper">
     <input id="priv_ad" class="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" /><br />
-    <div id="priv_qrcode" class="priv-qr-test"></div>
+    <div id="priv_qrcode" class="priv-qrcode"></div>
     <p class="private_key" value='<%= wallet.private_key %>'>private key: <%= wallet.private_key %></p>
-    <p><%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></p>
   </div>
+  <p><%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></p>
 </div>
 
 
