--- a/app/views/layouts/_business_form.html.erb
+++ b/app/views/layouts/_business_form.html.erb
@@ -1,6 +1,6 @@
 <%= bootstrap_form_for @business do |f| %>
 <div class="ui form">
-  <%= f.text_field :name, placeholder: 'Business Name' %>
+  <%= f.text_field :name, placeholder: 'Business Name', label: 'Business Name' %>
   <%= f.text_field :email, placeholder: 'email@example.com' %>
   <%= f.text_field :address, placeholder: 'Adress' %>
   <%= f.text_field :city, placeholder: 'City' %>
