private key can be hidden/shown with toggle button

--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -8,10 +8,13 @@
     <div id="pub_qrcode" class="pub-qrcode"></div>
     <p>Wallet address: <%= wallet.wallet_address %></p>
   </div>
+  <button class="private_key_button">
+    toggle private key
+  </button>
   <div class="private_key_wrapper">
+    <% if wallet.private_key %>
     <input id="priv_ad" class="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" /><br />
     <div id="priv_qrcode" class="priv-qrcode"></div>
-    <% if wallet.private_key %>
     <p class="private_key" value='<%= wallet.private_key %>'>private key: <%= wallet.private_key %></p>
     <% end %>
   </div>
