styled wallets index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,6 +138,6 @@ input.ui.standard.black.button {
 //   top: 29vh;
 //   left: 17vw;
 // }
-/* .private_key_wrapper {
+.private_key_wrapper {
   display: none;
-} */
+}
